# unsupervised_nids

./: .gitignore  README.md  main.py  pyproject.toml  run_unittests.sh  test.py
data/: .gitignore  test_datasets.py  utils.py
data/cicids2017/: README.md  __init__.py  get_random10.py  merge_dataset.py
data/mirai/: README.md
data/nslkdd/: __init__.py  _descriptor.py  _load.py  _preprocessor.py
notebooks/: choi2019unsupervised.ipynb  gong2019memorizing.ipynb  mirsky2018kitsune.ipynb
src/: preprocess.py
src/kitnet_utils/: autoencoder.py  correlation_cluster.py  kitnet.py
src/kitnet_utils/utils/: nn.py
src/nids/: autoencoder.py  kitnet.py  memae.py
src/torch_models/: autoencoder.py
tests/: test_training.py
