[project]
name = "unsupervised-nids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.10.6",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
]
